--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Flask-Cors==4.0.1
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==22.0.0
 idna==3.6
 iniconfig==2.0.0
 isort==5.13.2
