--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ pyproject-api==1.6.1
 pytest==8.0.0
 pytest-sugar==1.0.0
 python-dotenv==1.0.1
+requests==2.32.3
 SQLAlchemy==2.0.25
 termcolor==2.4.0
 tomli==2.0.1
