--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Flask-Cors==4.0.1
 Flask-Mpesa==1.2.8
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
+flask-vite==0.5.0
 Flask-WTF==1.2.1
 greenlet==3.0.3
 gunicorn==22.0.0
